# llm-council

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  council.py  main.py  openrouter.py  storage.py
docs/: advisor-prompts.md  architecture.md  public-review.md
examples/: founder-decision-sample.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css  sse.js  sse.test.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
tests/: test_api.py  test_council.py  test_openrouter.py  test_storage.py
