[project]
name = "llm-council"
version = "0.1.0"
description = "Local multi-model LLM council with anonymized peer review"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Brandon Carneiro" }]
license = "MIT"
keywords = ["llm", "openrouter", "multi-agent", "ai", "decision-support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "starlette>=1.0.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
